backend_rag/test_trees.txt

--- Testing C++ Executor ---
Standard Problem - Passed: True, Output: [0,1], Error: 
Tree Problem - Passed: False, Output: , Error: temp_6e4f9da9eada43bdab11ac7e846bb279.cpp: In function 'int main()':
temp_6e4f9da9eada43bdab11ac7e846bb279.cpp:134:32: error: invalid use of void expression
     print_res(sol.flatten(arg0));
                                ^

Design Problem - Passed: True, Output: [null,null,null,2,2,false], Error: 

--- Testing Java Executor ---
Standard Problem - Passed: True, Output: [0,1], Error: 
